fix: reorder items

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -114,6 +114,16 @@ As a content creator, you can now jump right into the File Details Drawer from t
 
 <Video src={hcmsEditFileDrawer} alt="Headless CMS - Edit File Drawer" />
 
+## File Manager
+
+### Introducing Private Files
+
+Private Files is a new feature, which is a part of the [Advanced Access Control Layer (AACL)](/docs/enterprise/aacl/introduction) set of features, available with the Webiny Enterprise license. This feature allows you to protect the files, managed via the File Manager, from unauthorized access.
+
+In this first iteration of the feature, a file can either be `public`, or `private`. Files set to `private` will require a valid identity to be present in the request. To keep track of the user's credentials, we're storing the `idToken`, which is otherwise sent via HTTP headers, into a cookie, set on the API domain.
+
+<Image src={fmAccessControl} alt="File Manager - Access Control" />
+
 ## Page Builder
 
 ### Increased Memory Size for Export/Import Related AWS Lambda Functions
@@ -123,6 +133,28 @@ Prior to this release, the AWS Lambda functions that were used for exporting and
 This change was necessary because, in some cases, the default memory size was not enough to handle the export/import process, which resulted in the process failing.
 
 ### https://github.com/webiny/webiny-js/pull/3825
+
+## Admin
+
+### Introducing Table Customization APIs ([#3756](https://github.com/webiny/webiny-js/pull/3756) [#3721](https://github.com/webiny/webiny-js/pull/3721) [#3785](https://github.com/webiny/webiny-js/pull/3785))
+
+In this latest release, we have introduced powerful APIs that allow developers to customize the tables used by our suite of applications, such as Headless CMS, Page Builder, and File Manager.
+
+Using these APIs, developers can now easily add new columns, replace existing ones, remove them, or reposition them as per their requirements. Additionally, they can also add, replace, remove, or reposition entries and folder actions.
+
+<Image src={hcmsDefaultTable} alt="Headless CMS - Table Columns and Actions" />
+
+### DrawerLeft and DrawerRight Components ([#3778](https://github.com/webiny/webiny-js/pull/3778))
+
+Webiny uses the Material Design drawers in many modules of the system. The main issue with them is that, by design, they're meant to only be used on the left side of the screen. But from the UX perspective, it's sometimes beneficial to have them open on the right side (like the File Details drawer, for example).
+
+To make it easy for the core team, but also other developers, to create drawers on both sides of the screen, we've now exported two new components `DrawerLeft` and `DrawerRight`, and we handle the technical implementation and positioning of those.
+
+```tsx
+import { DrawerRight, DrawerLeft } from "@webiny/ui/Drawer";
+```
+
+To find more details and code samples, visit the [PR](https://github.com/webiny/webiny-js/pull/3778).
 
 ## Deployments
 
@@ -143,7 +175,7 @@ about the different database setups Webiny supports.
 
 </Alert>
 
-## System
+## Other Improvements
 
 ### Node.js v18 ([#3561](https://github.com/webiny/webiny-js/pull/3561))
 
@@ -173,30 +205,6 @@ You can still use the old way of importing specific handler factories (s3, dynam
 
 To find out more about our Lambda event handlers, please read [this](/docs/core-development-concepts/basics/routes-and-events) article.
 
-## Admin
-
-### Introducing Table Customization APIs ([#3756](https://github.com/webiny/webiny-js/pull/3756) [#3721](https://github.com/webiny/webiny-js/pull/3721) [#3785](https://github.com/webiny/webiny-js/pull/3785))
-
-In this latest release, we have introduced powerful APIs that allow developers to customize the tables used by our suite of applications, such as Headless CMS, Page Builder, and File Manager.
-
-Using these APIs, developers can now easily add new columns, replace existing ones, remove them, or reposition them as per their requirements. Additionally, they can also add, replace, remove, or reposition entries and folder actions.
-
-<Image src={hcmsDefaultTable} alt="Headless CMS - Table Columns and Actions" />
-
-### DrawerLeft and DrawerRight Components ([#3778](https://github.com/webiny/webiny-js/pull/3778))
-
-Webiny uses the Material Design drawers in many modules of the system. The main issue with them is that, by design, they're meant to only be used on the left side of the screen. But from the UX perspective, it's sometimes beneficial to have them open on the right side (like the File Details drawer, for example).
-
-To make it easy for the core team, but also other developers, to create drawers on both sides of the screen, we've now exported two new components `DrawerLeft` and `DrawerRight`, and we handle the technical implementation and positioning of those.
-
-```tsx
-import { DrawerRight, DrawerLeft } from "@webiny/ui/Drawer";
-```
-
-To find more details and code samples, visit the [PR](https://github.com/webiny/webiny-js/pull/3778).
-
-## Other Improvements
-
 ### Webiny CLI - Introducing the `webiny open` Command
 
 With this release, we're introducing a new `webiny open` Webiny CLI command.
@@ -224,13 +232,3 @@ Note that, for local development, the apps are still spun up locally in the same
 This release added various new features which do not run on every request to the API. To optimize cold starts, and reduce the size of the main code bundle, we've now enabled support for code splitting, via [dynamic imports](https://webpack.js.org/guides/code-splitting/#dynamic-imports). This allows us to split away large dependencies which are rarely used, like for example, JSDOM (used when parsing HTML or rendering Lexical to HML).
 
 You're welcome to analyze your custom code, and see which parts of your plugins could be good candidates for code splitting.
-
-## Enterprise
-
-### Private Files
-
-Private Files is a new feature, which is a part of the [Advanced Access Control Layer (AACL)](/docs/enterprise/aacl/introduction) set of features, available with the Webiny Enterprise license. This feature allows you to protect the files, managed via the File Manager, from unauthorized access.
-
-In this first iteration of the feature, a file can either be `public`, or `private`. Files set to `private` will require a valid identity to be present in the request. To keep track of the user's credentials, we're storing the `idToken`, which is otherwise sent via HTTP headers, into a cookie, set on the API domain.
-
-<Image src={fmAccessControl} alt="File Manager - Access Control" />
