--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -1,7 +1,7 @@
 ---
 id: 268cc9e6
 title: Webiny 5.39.0 Changelog
-description: January 16, 2024
+description: January 29, 2024
 ---
 
 import { GithubRelease } from "@/components/GithubRelease";
@@ -11,6 +11,7 @@ import hcmsDefaultTable from "./assets/hcms-default-table.png";
 import hcmsRteHtmlOutput from "./assets/hcms-rte-html-output.png";
 import hcmsEditFileDrawer from "./assets/hcms-edit-file-drawer.mp4";
 import fmAccessControl from "./assets/fm-access-control.png";
+import pbAcoActions from "./assets/pb-aco-actions.png";
 
 <GithubRelease version={"5.39.0"} />
 
@@ -132,7 +133,14 @@ Prior to this release, the AWS Lambda functions that were used for exporting and
 
 This change was necessary because, in some cases, the default memory size was not enough to handle the export/import process, which resulted in the process failing.
 
-### https://github.com/webiny/webiny-js/pull/3825
+
+### Fixed List of Actions Shown to Users ([#3825](https://github.com/webiny/webiny-js/pull/3825))
+
+Prior to this release, some of the page-related actions shown in the list of pages would be shown to users, despite the fact that they didn't have the required <a href="/docs/enterprise/aacl/folder-level-permissions">folder level permissions</a> to perform those actions.
+
+<Image src={pbAcoActions} alt="Page Builder - ACO Actions" />
+
+With this release, we've fixed this issue, and now, the list of actions shown to users is based on the permissions they have for the folder in which the page is located.
 
 ## Admin
 
