fix: add a note re data migration duration

--- a/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
+++ b/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
@@ -119,11 +119,13 @@ So, to summarize, with this release, you can no longer skip updating the `savedO
 
 ## Data Migration
 
-This release includes a data migration that will automatically migrate all existing content entries to use the new meta fields. The migration is run automatically after the **API** project application is deployed.
+This release includes a data migration that will automatically migrate *all existing content entries* to use the new meta fields. Because of this, note that the duration of the migration varies, depending on the number of content entries stored in your database. For larger projects, for example with hundreds of thousands of content entries, the migration can take up to 15-30 minutes to complete.
+
+The migration is run automatically after the **API** project application is deployed.
 
 ### Assignments
 
-Essentially, the migration will perform the following revision-level and entry-level field value assignments on each content entry.
+The migration will perform the following revision-level and entry-level field value assignments on each content entry.
 
 <Alert type={"info"}>
 
