wip: background tasks

--- a/docs/developer-docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/basics/routes-and-events.mdx
@@ -4,6 +4,11 @@ title: Routes and Events
 description: You will learn about new handlers for routes and events, and how to add new routes and event definitions.
 ---
 
+
+import {Alert} from "@/components/Alert";
+import {CanIUseThis} from "@/components/CanIUseThis";
+import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
+
 <CanIUseThis since={"5.39.0"} />
 
 <WhatYouWillLearn>
