fix: add bg tasks into arch docs

--- a/docs/developer-docs/5.39.x/architecture/api/overview.mdx
+++ b/docs/developer-docs/5.39.x/architecture/api/overview.mdx
@@ -48,6 +48,7 @@ The diagram gives an overview of the complete cloud infrastructure that is deplo
 4. Page Builder (with Prerendering Service)
 5. Form Builder
 6. Headless CMS
+7. Background Tasks
 
 In the following text, we briefly cover how each of the different Webiny applications are utilizing the shown cloud infrastructure.
 
@@ -94,6 +95,10 @@ For storing data and performing search queries, the application relies on Amazon
 Learn more about the Headless CMS API in the [Headless CMS GraphQL API Overview](/docs/{version}/headless-cms/basics/graphql-api) article.
 
 </Alert>
+
+### 7. Background Tasks
+
+For background tasks (jobs)-related requirements, Webiny relies on [AWS Step Functions](https://aws.amazon.com/step-functions/) and AWS Lambda. The Step Functions are used to orchestrate the execution of the background tasks, while a single AWS Lambda function is used to execute the tasks themselves.
 
 ## FAQ
 
