fix: add bg tasks into arch docs

--- a/docs/developer-docs/5.39.x/architecture/api/overview.mdx
+++ b/docs/developer-docs/5.39.x/architecture/api/overview.mdx
@@ -100,6 +100,10 @@ Learn more about the Headless CMS API in the [Headless CMS GraphQL API Overview]
 
 For background tasks (jobs)-related requirements, Webiny relies on [AWS Step Functions](https://aws.amazon.com/step-functions/) and AWS Lambda. The Step Functions are used to orchestrate the execution of the background tasks, while a single AWS Lambda function is used to execute the tasks themselves.
 
+Note that background tasks are triggered via an Amazon EventBridge event. Amazon EventBridge is deployed as part of the **Core** project application (not shown on the diagram).  
+
+For more information on how to create and execute background tasks, check out the [Background Tasks](/docs/core-development-concepts/basics/background-tasks) article. 
+
 ## FAQ
 
 ### Why is Webiny using AWS Lambda to host a GraphQL Handler and not AWS AppSync?
